# orcetra

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  auto_check.py  backtest.py  batch_tracker.py  evolve_fast.py  evolve_v2.py  live_tracker.py  predict.py  pyproject.toml  requirements-experiments.txt  requirements.txt
_deprecated_murmur/: DEPRECATED.md  context_planner.py  fetcher.py  models.py  news.py  strategy.py
catboost_1774734201.5941608/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1774734201.5941608/learn/: events.out.tfevents
catboost_1774734201.5941608/test/: events.out.tfevents
catboost_1774737890.8740761/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1774737890.8740761/learn/: events.out.tfevents
catboost_1774737890.8740761/test/: events.out.tfevents
catboost_1774738120.5223858/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1774738120.5223858/learn/: events.out.tfevents
catboost_1774738120.5223858/test/: events.out.tfevents
catboost_1774738988.6668763/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1774738988.6668763/learn/: events.out.tfevents
catboost_1774749241.223268/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
dashboard/: data.json  index.html  murmur-dashboard.html  orcetra-dashboard.html
experiments/: RESUME_PLAN.md  analyze_multi_framework.py  domain_analysis.py  flaml_pilot.py  flaml_pilot_v2.py  flaml_strict_30s.py  flaml_strict_30s_remaining.py  icml_benchmark.py  multi_framework_benchmark.py  openml_benchmark.py  test_ensemble.py  test_multi_framework.py
experiments/results/: benchmark_log.txt  (+13 more)
murmur/: __init__.py  context_planner.py  evaluator.py  evolve.py  fetcher.py  models.py  news.py  strategy.py
paper/: main.tex  references.bib
results/: backtest.json  backtest_cache.json  calibration_map.json  check_log.json  evolution_v2_log.json  evolved_rules.py  live_predictions.json  phase1_calibration.json  phase1_deep.json  price_snapshots.jsonl  resolved_events.json
scripts/: daily_pipeline.sh  enrich_top.py  gen_dashboard.py  track_prices.py
site/: dashboard.html  index.html
tests/: test_ensemble.py
video/: PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  render-all.sh  render-full.sh  tsconfig.json
(+55 files in other folders)
